# quarto

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  _quarto.yml  pyproject.toml  report.R2.md  report.qmd  setup.sh
.claude/: settings.json  settings.local.json
.claude/agent-memory/thermo-engineer/: MEMORY.md  project_nitrogen_notebook.md  user_mike_profile.md
.claude/agents/: technical-reviewer.md  thermo-engineer.md
.codex/skills/quarto-alt-text-pass/: SKILL.md
.codex/skills/quarto-analysis-notebook/: SKILL.md
.codex/skills/quarto-brand-setup/: SKILL.md
.codex/skills/quarto-handoff-and-manifest/: SKILL.md
.codex/skills/quarto-render-debug/: SKILL.md
.codex/skills/quarto-source-conversion/: SKILL.md
_scripts/: clean_parts_tables.py  make_fixture_schematic.py  openai_reasoned_review.py  transform_matlab_block.py  transform_report.py  transform_report_pass3.py
_shared/: _metadata.yml  refs.bib
_shared/ai_docs/: coolprop-reference.md  thermo-engineering-reference.md
_shared/templates/: document-types.md  pir.qmd
_state/shipping/: manifest.yml
docs/: openai-reasoned-reviewer.md
output/jupyter-notebook/: build_coolprop_notebook.py  nitrogen-shipping-coolprop-cycle-v1.ipynb  nitrogen-shipping-coolprop-cycle.ipynb  nitrogen-shipping-failure-model-exploration.ipynb
projects/galling-mitigation/: README.md  _quarto.yml  digital-twin.qmd  report.qmd  test-plan.qmd
projects/shipping/: README.md  SESSION_HANDOFF.md  _quarto.yml  _variables.yml  compliance-volume-design.qmd  failure-mechanism.qmd  nitrogen_shipping_failure_model.py  traceability.yml
(+56 files in other folders)
