[project]
name = "quarto-workspace"
version = "0.1.0"
description = "Quarto publishing workspace for opto-mechanical engineering reports"
requires-python = ">=3.12"
dependencies = [
    # ── Jupyter / notebook infrastructure ──
    "jupyter>=1.1",
    "jupyterlab>=4.5",
    "notebook>=7.5",
    "ipykernel>=7.2",
    "ipywidgets>=8.1",

    # ── Core scientific stack ──
    "numpy>=2.4",
    "scipy>=1.17",
    "pandas>=3.0",
    "matplotlib>=3.10",

    # ── Thermodynamic property libraries ──
    "CoolProp>=7.2",
    "iapws>=1.5",
    "pyromat>=2.2",

    # ── Caleb Bell engineering stack ──
    "ht>=1.2",
    "fluids>=1.3",
    "thermo>=0.6",
    "chemicals>=1.5",

    # ── Units and utilities ──
    "pint>=0.25",
    "tabulate>=0.9",
]

[project.optional-dependencies]
review = [
    "openai>=1.0",
    "pydantic>=2.0",
    "python-docx>=1.1",
]

dev = [
    "nbconvert>=7.17",
    "nbclient>=0.10",
]

# This is a workspace, not an installable package.
# Prevent setuptools from scanning for Python packages.
[tool.setuptools]
py-modules = []

[tool.uv]
python-preference = "managed"
